# Mullberry

./: .replit  pyproject.toml  replit.nix
attached_assets/: Pasted-Mulberry-Empowering-MLLM-with-o1-like-Reasoning-and-Reflection-via-Collective-Monte-Carlo-Tree-Sear-1735339789744.txt
lightning_logs/version_0/: events.out.tfevents.1735340321.ef60e6dc55be.1543.0
lightning_logs/version_1/: events.out.tfevents.1735340383.ef60e6dc55be.1784.0
lightning_logs/version_2/: events.out.tfevents.1735340433.ef60e6dc55be.1895.0
lightning_logs/version_3/: events.out.tfevents.1735340504.ef60e6dc55be.2225.0
lightning_logs/version_4/: events.out.tfevents.1735340540.ef60e6dc55be.2362.0
lightning_logs/version_5/: events.out.tfevents.1735340584.ef60e6dc55be.2494.0
lightning_logs/version_6/: events.out.tfevents.1735340623.ef60e6dc55be.2628.0
lightning_logs/version_7/: events.out.tfevents.1735340679.ef60e6dc55be.2717.0
lightning_logs/version_8/: events.out.tfevents.1735340745.ef60e6dc55be.2807.0
src/data/: dataset.py
src/models/: comcts.py  mulberry.py  policy.py
src/training/: trainer.py
src/utils/: metrics.py  tree.py
tests/: test_training.py
