[project]
name = "repl-nix-reflectivelearning"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "einops>=0.8.0",
    "email-validator>=2.2.0",
    "flask>=3.1.0",
    "flask-sqlalchemy>=3.1.1",
    "numpy>=2.2.1",
    "psycopg2-binary>=2.9.10",
    "pytorch-lightning>=2.5.0.post0",
    "tensorboard>=2.18.0",
]
